# rbiblio

./: .env  .gitignore  Cargo.toml  diesel.toml
migrations/2024-03-23-114415_chemicals/: down.sql  up.sql
migrations/2024-03-27-155503_create_chemical_indexs/: down.sql  up.sql
pubmed/: Cargo.toml
pubmed-utils/: Cargo.toml
pubmed/src/: lib.rs
pubmed/tests/: test_pubmed.rs
pubmed_db/: Cargo.toml
pubmed_db/src/: lib.rs  models.rs  schema.rs
src/: main.rs
src/db/: mod.rs
src/pubmed/: mod.rs
