[workspace]
members = ["pubmed"]
# [package]
# name = "rbiblio"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# dotenv = "0.15.0"
# directories = "5.0.1"
# serde = {version = "1.0.188", features = ["derive"]}
# serde_json = "1.0.105"
# quick-xml = {version= "0.30.0", features = ["serialize"]}
# flate2 = "1.0.27"
# futures = "0.3.28"
#[lib]
# pubmed = {version = "0.1" ,path = "./pubmed/lib.rs"}
# [executables]
# dump_pubmed = {path = "src/main.rs"}