[package]
name = "pubmed-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dump_pubmed_directory"
test = false
bench = false

[dependencies]
pubmed = {path = "../pubmed"}
# dotenv = "0.15.0"
# directories = "5.0.1"
# serde = {version = "1.0.188", features = ["derive"]}
# serde_json = "1.0.105"
# quick-xml = {version= "0.31.0", features = ["serialize","async-tokio"]}
# futures = "0.3.28"
tokio = { workspace = true, features = ["full"] }
# async-compression = {version = "0.4.6", features = ["gzip","tokio"]}
rsnltk = "0.1.3"

