[package]
name = "pubmed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
directories = "5.0.1"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
quick-xml = {version= "0.31.0", features = ["serialize"]}
flate2 = "1.0.27"
futures = "0.3.28"