[package]
name = "pubmed-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {workspace = true}
diesel = {workspace=true, features = ["postgres","serde_json","chrono","r2d2", "uuid"]}
# r2d2 = {workspace = true}
pubmed = {path = "../pubmed"}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true }
futures = {workspace = true}
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "upload_chemicals"

